Fix W5 particle overlap and desktop interaction

--- a/w5.css
+++ b/w5.css
@@ -414,6 +414,8 @@ body.hovering .cursor-outline {
     overflow: visible;
     /* Fix clipping of bottom item */
     padding-top: 100px;
+    margin-top: 20vh;
+    /* Add breathing room */
     /* Add breathing room */
     padding-bottom: 100px;
     z-index: 10;
